add PreBuildEvent for ffmpeg lib in targetDir

--- a/Unosquare.FFME.Windows.Sample/Unosquare.FFME.Windows.Sample.csproj
+++ b/Unosquare.FFME.Windows.Sample/Unosquare.FFME.Windows.Sample.csproj
@@ -125,4 +125,8 @@
     </Page>
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="$(SolutionDir)\..\post-build-script.bat $(SolutionDir) $(TargetDir)" />
+  </Target>
+
 </Project>
