use Dynamic resource add pre/post build event

--- a/Unosquare.FFME.Windows.Sample/Unosquare.FFME.Windows.Sample.csproj
+++ b/Unosquare.FFME.Windows.Sample/Unosquare.FFME.Windows.Sample.csproj
@@ -42,11 +42,16 @@
     <Description>Reference implementation of a media player using the FFME</Description>
     <Copyright>Unosquare SA de CV, Mario Di Vece, and Contributors, (C) 2015-2020</Copyright>
     <PackageProjectUrl>https://github.com/unosquare/ffmediaelement</PackageProjectUrl>
-    <ApplicationIcon>ffmpeg.ico</ApplicationIcon>
+    <ApplicationIcon>svp.ico</ApplicationIcon>
+    <Win32Resource />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DefineConstants>TRACE;DEBUG;HANDLE_RENDERING_EVENTS</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net5.0-windows|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE;HANDLE_RENDERING_EVENTS</DefineConstants>
   </PropertyGroup>
   
   <ItemGroup>
@@ -127,6 +132,10 @@
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="$(SolutionDir)\..\post-build-script.bat $(SolutionDir) $(TargetDir)" />
+  </Target>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="$(SolutionDir)\..\release-to-repository.bat $(TargetDir) $(ConfigurationName) $(PlatformName)" />
   </Target>
 
 </Project>
