--- a/Unosquare.FFME.Windows.Sample/Unosquare.FFME.Windows.Sample.csproj
+++ b/Unosquare.FFME.Windows.Sample/Unosquare.FFME.Windows.Sample.csproj
@@ -9,7 +9,7 @@
     </When>
     <Otherwise>
       <PropertyGroup>
-        <TargetFrameworks>net5.0-windows;net461;net48</TargetFrameworks>
+        <TargetFrameworks>net5.0-windows</TargetFrameworks>
       </PropertyGroup>
     </Otherwise>
   </Choose>
